<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StubScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/schedule"
            android:textColor="@color/text_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flexboxLayoutDaysOfTheWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:flexWrap="wrap"
            app:justifyContent="center"
            app:alignItems="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circle_background_active"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circle_background"
                android:gravity="center"
                android:text="2"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circle_background"
                android:gravity="center"
                android:text="3"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circle_background"
                android:gravity="center"
                android:text="4"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circle_background"
                android:gravity="center"
                android:text="5"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circle_background"
                android:gravity="center"
                android:text="6"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_background"
                android:gravity="center"
                android:text="7"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            app:flexWrap="wrap"
            app:justifyContent="center"
            app:alignItems="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:background="@drawable/item_background"
                android:minWidth="160dp"
                android:padding="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_apple" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast"
                    android:textColor="@color/black"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/breakfast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast_meal7"
                    android:textColor="@color/black"
                    android:layout_marginTop="4dp"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/item_background"
                android:minWidth="160dp"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_saucepan" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/lunch"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lunch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/lunch_meal7"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:background="@drawable/item_background"
                android:minWidth="160dp"
                android:padding="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_orange" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/snack"
                    android:textColor="@color/black"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/snack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/snack_meal7"
                    android:textColor="@color/black"
                    android:layout_marginTop="4dp"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:background="@drawable/item_background"
                android:minWidth="160dp"
                android:padding="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_dish" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dinner"
                    android:textColor="@color/black"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dinner_meal7"
                    android:textColor="@color/black"
                    android:layout_marginTop="4dp"
                    android:textSize="14sp" />

            </LinearLayout>

        </com.google.android.flexbox.FlexboxLayout>

    </LinearLayout>

</ScrollView>